# qmini_temp

./: .gitignore  README.md  README_zh.md
qmini_deploy/: CMakeLists.txt  README.md  README_zh.md
qmini_deploy/config/: qmini_config.yaml  test_yaml_cpp.yaml
qmini_deploy/include/user/: ControlFSMData.h  FSM.h  FSMState.h  FSMState_Passive.h  FSMState_StandUp.h  FSMState_Walk.h  Qmini.h  gamepad_interface.h  imu_interface.h  math_utils.h  motor_interface.h  onnx_inference.h  type.h
qmini_deploy/onnx_models/: qmini_actor.onnx  qmini_estimator.onnx
qmini_deploy/src/test/: test_gamepad_interface.cpp  test_goM8010_6_motor.cpp  test_imu_interface.cpp  test_yaml_cpp.cpp
qmini_deploy/src/user/: FSM.cpp  FSMState.cpp  FSMState_Passive.cpp  FSMState_StandUp.cpp  FSMState_Walk.cpp  main.cpp  math_utils.cpp
qmini_rl/: README.md  README_zh.md  setup.py
qmini_rl/legged_gym/envs/: __init__.py
qmini_rl/legged_gym/envs/qmini/: qmini.py  qmini_config.py
qmini_rl/legged_gym/runners/: on_policy_runner_ee.py
qmini_rl/legged_gym/scripts/: play.py
qmini_rl/legged_gym/utils/: logger.py  task_registry.py  terrain.py
qmini_rl/resources/robots/qmini/urdf/: qmini.urdf
